# shell

./: .gitignore  CMakeLists.txt  README.md  shell
.cache/clangd/index/: main.cpp.2E330C278E135A9D.idx
src/: main.cpp
